testdata/invalid/type_mismatch.sol
var x int = "not an int";
